--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
+os: linux
+dist: xenial
+
 language: go
 
-go:
-  - "1.15.5"
-
-os:
-  - linux
-
-dist: xenial
+jobs:
+  include:
+    - go: "master"
+      env: "GOIMPORTS_CHECK=0"
+    - go: "1.15.5"
+      env: "GOIMPORTS_CHECK=1"
 
 cache:
   directories:
@@ -20,7 +22,7 @@ env:
 
 before_script:
   - set -eo pipefail
-  - go get -u golang.org/x/tools/cmd/goimports
+  - test $GOIMPORTS_CHECK -eq 1 && go get -u golang.org/x/tools/cmd/goimports
 script:
   # We could merge the two commands below for efficiency, but it would give less comprehensive errors
   # Check files syntax and basic formatting
@@ -36,8 +38,8 @@ script:
   # Then check formatting errors
   - checkEmpty "$ERR_FILES"
   # Check advanced files formatting, including imports
-  - ERR_FILES=`find . -name "*.go" -execdir goimports -l '{}' \+`
-  - checkEmpty "$ERR_FILES"
+  - test $GOIMPORTS_CHECK -eq 1 && ERR_FILES=`find . -name "*.go" -execdir goimports -l '{}' \+`
+  - test $GOIMPORTS_CHECK -eq 1 && checkEmpty "$ERR_FILES"
 
   # Run the test suite
   - go test -v ./...
